# bprtsn

./: README.md
backend/: pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/api/: __init__.py  actions.py  auth.py  campaigns.py  civic.py  debates.py  status.py  topics.py
backend/app/core/: config.py  telemetry.py
backend/app/db/: base.py
backend/app/models/: __init__.py  action.py  campaign.py  debate.py  post.py  user.py
backend/app/services/: actions.py  campaigns.py  civic.py  debates.py  moderation.py  status.py  topics.py
frontend/: index.html  package.json
frontend/src/: App.jsx
frontend/src/components/: FactCheckCard.jsx  ImpactTracker.jsx  LiveUpdates.jsx  MyStanceCard.jsx  PollCard.jsx  TopicColumn.jsx  VideoCard.jsx
frontend/src/sections/: Campaigns.jsx  Debate.jsx  Feed.jsx  Profile.jsx
frontend/src/styles/: index.css
infrastructure/: README.md
mobile/: README.md  package.json
mobile/app/: _layout.js  campaigns.js  debate.js  index.js  topics.js
